Dark Mode CSS Issues Resolved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,14 @@ html {
   @apply text-gray-800 dark:text-gray-200 px-1 py-0.5 border border-gray-100 dark:border-gray-800 rounded-md bg-gray-100 dark:bg-gray-900;
 }
 
+blockquote {
+  @apply text-gray-900 dark:text-gray-400;
+}
+
+strong {
+  @apply text-gray-900 dark:text-gray-100;
+}
+
 .prose img {
   /* Don't apply styles to next/image */
   @apply m-0;
